fix: style on mobile

--- a/components/app-bar/index.module.scss
+++ b/components/app-bar/index.module.scss
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: 16px;
   left: 16px;
-  width: calc(100vw - 32px);
+  width: calc(100% - 32px);
   height: 48px;
   background-color: #111;
   opacity: 0.6;
@@ -14,12 +14,12 @@
 
   @include base.media((tablet)) {
     left: 32px;
-    width: calc(100vw - 64px);
+    width: calc(100% - 64px);
   }
 
   @include base.media((laptop)) {
     left: 64px;
-    width: calc(100vw - 128px);
+    width: calc(100% - 128px);
     background-color: transparent;
     background-image: linear-gradient(
       to right,
