--- a/components/layout/index.module.scss
+++ b/components/layout/index.module.scss
@@ -2,12 +2,12 @@
 
 .container {
   position: absolute;
-  top: 16px;
+  bottom: calc(48px + 16px + 16px); // app-bar bottom + app-bar height + bottom
   left: 16px;
-  width: calc(100vw - 32px);
+  width: calc(100% - 32px);
   height: calc(
-    100vh - 16px - 48px - 16px - 16px
-  ); // 100vh - app-bar bottom - app-bar height - bottom - top
+    100% - 16px - 48px - 16px - 16px
+  ); // 100% - app-bar bottom - app-bar height - bottom - top
   background-image: linear-gradient(
     to bottom,
     rgba(17, 17, 17, 0.2),
@@ -27,16 +27,16 @@
 
   @include base.media((tablet)) {
     left: 32px;
-    width: calc(100vw - 64px);
+    width: calc(100% - 64px);
   }
 
   @include base.media((laptop)) {
     left: 64px;
-    width: calc(100vw - 128px);
-    top: calc(16px + 10%);
+    width: calc(100% - 128px);
+    bottom: calc(48px + 16px + 16px + 10%);
     height: calc(
       80% - 16px - 48px - 16px - 16px
-    ); // 100vh - app-bar bottom - app-bar height - bottom - top
+    ); // 80% - app-bar bottom - app-bar height - bottom - top
     background-image: linear-gradient(
       to right,
       rgba(17, 17, 17, 0),
